# Smart-Expense-Tracker

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/application/: dto.py
src/application/dto/: user_response.py
src/application/interfaces/: ai_categorizer.py  password_hasher.py
src/application/use_cases/: create_transaction.py  create_user.py  deposit.py  register_user.py  withdraw.py
src/domain/entities/: transaction.py  user.py
src/domain/interfaces/: password_hasher.py  transaction_repo.py  transaction_repository.py  user_repo.py  user_repository.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/database/: __init__.py  base.py  models.py  provider.py
src/infrastructure/database/models/: transaction.py  users.py
src/infrastructure/database/repository/: transaction.py  users.py
src/infrastructure/services/: password_hasher.py
